# simpleBazelProjectsForTesting

./: .gitignore  README.md
bazelProjectModelModifierTest/: AnotherDependency.java  BUILD  BUILD.expected  BUILD.expected2  Dependency.java  MODULE.bazel  UsesDependency1.java  UsesDependency2.java  UsesDependency3.java  my_java_library.bzl
broken/: BUILD  MODULE.bazel
coroutineDebug/: MODULE.bazel
coverageTest/: .gitignore  BUILD  MODULE.bazel
directoryTargetScopeTest/: .bazelrc  MODULE.bazel  all-dirs-subset-targets.bazelproject  bazel-bin  bazel-out  bazel-testlogs  excluded-dir-with-target.bazelproject  no-targets-no-derive.bazelproject  projectview.bazelproject
directoryTargetScopeTest/app/: App.java  BUILD.bazel
directoryTargetScopeTest/client/: BUILD.bazel  Client.java
directoryTargetScopeTest/common/: BUILD.bazel  Common.java
directoryTargetScopeTest/database/: BUILD.bazel
fastBuildTest/: BUILD  Calculator.java  MODULE.bazel  Main.java
generatedCodeTest/: BUILD  MODULE.bazel  Main.kt  my_addition.kt
goModTest/: .gitignore  BUILD.bazel  MODULE.bazel  main_test.go
goModTest/test_data/dir2/: go.mod
goRunConfigurationsTest/: BUILD.bazel  MODULE.bazel  main.go  projectview.bazelproject
goRunConfigurationsTest/tools/intellij/runConfigurations/: ___main_binary.run.xml
importDepthZero/: .bazelproject
importRunConfigurations/: .gitignore  BUILD  MODULE.bazel  maven_install.json
importRunConfigurations/src/com/example/: KotlinTest.kt  Main.java  Main.kt
importRunConfigurations/tools/intellij/: .managed.bazelproject
importRunConfigurations/tools/intellij/runConfigurations/: Remote_JVM.xml  Run_Main.xml  Test_Calculator.xml
javaStrictDeps/: BUILD.bazel  MODULE.bazel
jetbrainsTestRunner/: .bazelproject  BUILD  MODULE.bazel  TestJava.java  TestKotlin.kt  maven_install.json
jetbrainsTestRunner/runner/: BazelJUnitOutputListener.java  EntryDetails.java  IgnoreException.java  IjSmTestExecutionListener.java  JUnit5BazelRunner.java  SafeXml.java  TestCaseXmlRenderer.java  TestData.java  TestSuiteXmlRenderer.java
kotlinStrictDepsTest/: BUILD.bazel  MODULE.bazel  Main.kt
legacyGooglePluginTest/: BUILD  MODULE.bazel
legacyRulesProto/: MODULE.bazel
localPathOverride/: BUILD  MODULE.bazel  Main.kt  projectview.bazelproject
moveFilesTest/: .bazelproject  BUILD  Class1.java  Class2.kt  Class3.java  Class4.kt  MODULE.bazel
nonModuleTargetsTest/: BUILD  bin.sh  projectview.bazelproject  test.sh
projectViewAppearanceTest/: projectview.bazelproject
projectViewChangeTest/: .bazelrc  BUILD.bazel  MODULE.bazel  alternate.bazelproject  projectview.bazelproject
projectViewCombinedTest/: .bazelrc  all-dirs-all-targets.bazelproject  bazel-directoryTargetScopeTest  binary_outside_project_view.bazelproject  build-flags-with-toolchain.bazelproject  excluded-dir-with-target.bazelproject  projectview.bazelproject  subset-dirs-derive-targets.bazelproject  targets-but-not-dirs.bazelproject
projectViewCombinedTest/binary/: BUILD.bazel  MainTest.java
protobufStrictDepsTest/: .bazelproject  .gitignore  MODULE.bazel  README.md
protobufStrictDepsTest/app/: BUILD.bazel  Main.scala
protobufStrictDepsTest/appj/: BUILD.bazel  Main.java
protobufStrictDepsTest/proto/common/: BUILD.bazel  common.proto
protobufStrictDepsTest/proto/requests/: BUILD.bazel  requests.proto
protobufTest/: .bazelrc  MODULE.bazel
protobufTest/prefix/consumerJava/: BUILD
protobufTest/prefix/libA/: BUILD
protobufTest/prefix/libB/: BUILD  lib_b.proto
protobufTest/pure/consumerJava/: BUILD
protobufTest/pure/libA/: BUILD
protobufTest/pure/libB/: BUILD  lib_b.proto
protobufTest/stripped1/consumerJava/: BUILD
protobufTest/stripped1/libA/: BUILD
protobufTest/stripped1/libB/: BUILD  lib_b.proto
protobufTest/stripped2/consumerJava/: BUILD
protobufTest/stripped2/libA/: BUILD
protobufTest/stripped2/libB/: BUILD  lib_b.proto
pythonProtobufTest/: .gitignore  MODULE.bazel  README.md  py_stubs_aspect.bzl  pyproject.toml
pythonProtobufTest/hirschgarten_python_test/: BUILD.bazel  __main__.py  lib.py
pythonProtobufTest/proto/: BUILD.bazel  example.proto
pythonProtobufTest/tools/intellij/: .managed.bazelproject
runAllTests/: AdditionTest.java  BUILD  MODULE.bazel  MultiplicationTest.java  SubtractionTest.java  projectview.bazelproject
simpleJavaTest/: .bazelrc  .gitignore  BUILD  MODULE.bazel  Simple2Test.java  SimpleTest.java  SimpleTest2.java
simpleJavaTest/basenameConflict/: BUILD  SimpleTest.java
simpleJavaTest/basenameConflict/nested/: SimpleTest.java
simpleJavaTest/forwarded/: BUILD.bazel  forward.bzl
simpleKotlinTest/: .bazelproject  .bazelrc  A.kt  BUILD  SimpleKotlinTestChanged.kt  Y.kt  Z.kt  maven_install.json
simpleMultiLanguageTest/: .bazelproject  MODULE.bazel
simpleMultiLanguageTest/cpp/: BUILD
simpleMultiLanguageTest/go/: BUILD
simpleMultiLanguageTest/java/: BUILD  Bin.java  Lib.java  Test.java
simpleMultiLanguageTest/kotlin/: BUILD  Bin.kt  Lib.kt
simpleMultiLanguageTest/python/: BUILD  bin.py  lib.py  requirements.txt  test.py
simpleMultiLanguageTest/python/libs/my_lib/: BUILD
simpleMultiLanguageTest/python/libs/my_lib2/: BUILD  util.py
simpleMultiLanguageTest/python/main/: BUILD  main.py
simpleMultiLanguageTest/python/rules/: rules.bzl
simplePythonTest/: MODULE.bazel
simplePythonTest/withImports/: BUILD.bazel  main.py
simplePythonTest/withImports/src/lib/foo/: foo.py
simpleScalaTest/: MODULE.bazel
starlarkResolveTest/: MODULE.bazel
starlarkResolveTest/src/: BUILD  SimpleKotlinTest.kt
starlarkResolveTest/src/package_with_macros/: BUILD  macro_that_changes_name.bzl
syntheticRunTargetTest/: MODULE.bazel
testSourcesMarking/: .gitignore  MODULE.bazel
testSourcesMarking/java/: BUILD
testSourcesMarking/java/case1/: BUILD  TestLibrary.java
testSourcesMarking/java/case2/: BUILD  JavaBinary.java  JavaTest.java  MixedSource.java  NormalLibrary1.java  NormalLibrary2.java
testSourcesMarking/java/case3/: BUILD  TestLibrary.java  TestOnlyLibrary.java
with_go_source/: MODULE.bazel
(+83 files in other folders)
