load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "user_service_lib",
    srcs = ["main.go"],
    importpath = "complex_go_project/cmd/user_service",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "user_service",
    embed = [":user_service_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "user_service_test",
    srcs = ["main_test.go"],
    embed = [":user_service_lib"],
)
