module(
    name = "complex_go_project",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")
bazel_dep(
    name = "gazelle",
    version = "0.51.3",
    repo_name = "bazel_gazelle",
)
bazel_dep(name = "package_metadata", version = "0.0.10")
bazel_dep(name = "rules_license", version = "1.0.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_ibm_sarama")
