load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "main_library",
    srcs = ["main.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "main_binary",
    embed = [":main_library"],
    visibility = ["//visibility:public"],
)
