module(
    name = "transitive_proto_reproduce",
    version = "0.0.1",
)

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.1")
bazel_dep(name = "rules_scala", version = "7.1.5")
bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_java", version = "8.3.0")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.17")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()

scala_protoc = use_extension(
    "@rules_scala//scala/extensions:protoc.bzl",
    "scala_protoc",
    dev_dependency = True,
)
use_repo(scala_protoc, "rules_scala_protoc_toolchains")

register_toolchains(
    "@rules_scala_protoc_toolchains//...:all",
    dev_dependency = True,
)

scala_deps.scala_proto(
    default_gen_opts = [
        "flat_package",
    ],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
  artifacts = [
    "com.google.protobuf:protobuf-java:4.28.3",
  ],
)

use_repo(maven, "maven")

### Hermetic CC Toolchain

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

# MacOS ARM64 only; others use Zig hermetic
# Based on the issue -- https://github.com/uber/hermetic_cc_toolchain/issues/10
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "darwin-aarch64": "15.0.0",
    },
)
use_repo(llvm, "llvm_toolchain")
