module(
    name = "hirschgarten_python_test",
)

bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "protobuf", version = "34.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11.13",
)
use_repo(python, "python_3_11", "python_3_11_host", "python_versions")

bazel_dep(name = "rules_pycross", version = "0.8.1")

pycross = use_extension("@rules_pycross//pycross/extensions:pycross.bzl", "pycross")
pycross.configure_environments(
    platforms = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
    python_versions = [
        "3.11.13",
    ],
)

# Use the lock_import extension to import external lock files.
lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")

# Import from uv
lock_import.import_uv(
    lock_file = "//:uv.lock",
    project_file = "//:pyproject.toml",
    repo = "uv_deps",
)

lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
use_repo(lock_repos, "uv_deps")
