
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# Work around https://github.com/bazelbuild/rules_apple/issues/2660
bazel_dep(name = "rules_apple", version = "3.19.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.1",
        "org.junit.jupiter:junit-jupiter-params:5.12.1",
        "org.junit.jupiter:junit-jupiter-api:5.12.1",
        "org.junit.platform:junit-platform-launcher:1.12.1",
        "org.junit.platform:junit-platform-reporting:1.12.1",
    ],
)
use_repo(maven, "maven")

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)
