bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_java", version = "8.6.2")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_go", version = "0.54.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//python:requirements.txt",
)
use_repo(pip, "pip") 



http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "requests",
    url = "https://github.com/psf/requests/archive/refs/tags/v2.31.0.zip",
    strip_prefix = "requests-2.31.0",
    integrity = "sha256-1+Pf88xDO4jJOk/FhXNiIMbGpCV9NX1Iumo+Pxwpp10=",
    build_file_content = """
py_library(
    name = "requests",
    srcs = glob(["requests/**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [],
)
""",
)

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)