load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_test.bzl", "java_test")
load("//tools:defs.bzl", "custom_binary", "custom_java_lib", "custom_test")

java_binary(
    name = "java_binary",
    main_class = "Main",
    runtime_deps = [":custom_java_lib"],
)

custom_java_lib(
    name = "custom_java_lib",
    srcs = ["Main.java"],
)

custom_binary(
    name = "custom_binary",
    srcs = ["Main.java"],
    main_class = "Main",
)

java_test(
    name = "java_test",
    srcs = ["MainTest.java"],
    test_class = "com.example.MainTest",
)

custom_test(
    name = "custom_test",
    srcs = ["MainTest.java"],
    test_class = "com.example.MainTest",
)
