package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")

proto_library(
    name = "requests_proto",
    srcs = ["requests.proto"],
    deps = [
        "//proto/common:common_proto",
        "@protobuf//:timestamp_proto",
    ],
)

scala_proto_library(
    name = "requests_scala_proto",
    deps = [":requests_proto"],
)

java_proto_library(
    name = "requests_java_proto",
    deps = [":requests_proto"],
)
